--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     <div class="container">
         <header>
             <h1>Currículum Vitae</h1>
-            <p>Nombre: Juan Pérez</p>
+            <p>Nombre: Adrián Muñoz Gutiérrez</p>
             <p>Teléfono: 123-456-789</p>
-            <p>Correo electrónico: juanperez@example.com</p>
+            <p>Correo electrónico: blablabla@example.com</p>
         </header>
         
         <div class="section">
